Fri Sep 23 05:55:03 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/HTIOP/Hello/Makefile.am:

	  Regenerated.

	* orbsvcs/HTIOP/Hello/HTIOP_Hello.mpc:

	  Added "custom_only = 1" to *idl project.

Fri Sep 23 11:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/Event.inl:
          Emulated exception fix

Fri Sep 23 11:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.{h,cpp}:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:
          Some wchar fixes

Fri Sep 23 10:05:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/CallbackTest/Callback.cpp:
        * tests/CallbackTest/server.cpp:
        * tests/CallbackTest/client.cpp:

          Fixed compile warnings.

Thu Sep 22 23:55:22 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/tests/HTIOP/AMI/Makefile.am:
        * orbsvcs/tests/HTIOP/Hello/Makefile.am:

          Regenerated.

        * orbsvcs/tests/HTIOP/AMI/HTIOP_AMI.mpc:
        * orbsvcs/tests/HTIOP/Hello/HTIOP_Hello.mpc:

          Add "*idl" projects for compiling *.idl files. This eliminates
          duplicate rules that would otherwise result when Makefile.am's
          are aggregated in the automake build.

Thu Sep 22 14:03:11 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Updated AC_CONFIG_FILES for the new directories.

          Added BUILD_REPO, BUILD_THREADS, and BUILD_EC_TYPED_EVENTS
          automake conditionals.  Explicitly set to false, true, and
          true (at least for now).

        * TAO_IDL/Makefile.am:
        * orbsvcs/Makefile.am:
        * orbsvcs/Concurrency_Service/Makefile.am:
        * orbsvcs/CosEvent_Service/Makefile.am:
        * orbsvcs/Dump_Schedule/Makefile.am:
        * orbsvcs/Event_Service/Makefile.am:
        * orbsvcs/FTRT_Event_Service/Makefile.am:
        * orbsvcs/FTRT_Event_Service/Event_Service/Makefile.am: