@@ -1080,13 +1080,7 @@ the ORB uses. The default reactor is the ACE_TP_Reactor.
             <tr>
               <td><code>tp</code></td>
               <td>Use the <code>ACE_TP_Reactor</code>, a select based
-thread-pool reactor which is the
-        MT_NO_UPCALL means use a client connection handler that
-        participates in the leader-follower model like MT, but, like
-        RW, does not allow handling of nested upcalls within the
-        waiting thread.
-
-default.</td>
+thread-pool reactor which is the default.</td>
             </tr>
           </tbody>
         </table>
